data/derived/sp14/progs/unify/prog4204.ml.out
Characters 63-70:
  (listReverse List.tl l) @ (List.hd l ::[])
               ^^^^^^^
Error: This expression has type 'a list -> 'a list
       but an expression was expected of type 'b list
